--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -24,7 +24,7 @@
 
 /* modal */
 .modal {
-  position: absolute;
+  position: fixed;
   top: 1%;
   left: 1%;
   width: 100%;
@@ -40,7 +40,7 @@
 /* postsDeatil header */
 .postsDetail-share-btn {
   display: block;
-  font-size: var(--font-regular);
+  font-size: var(--font-large);
   margin-left: auto;
   color: #a7c0cd;
 }
